--- a/.eslintrc
+++ b/.eslintrc
@@ -65,7 +65,21 @@
       {
         "extensions": [".js", ".jsx", ".tsx"]
       }
-    ],
-    "@typescript-eslint/no-unused-vars": "off"
-  }
+    ]
+  },
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+      "rules": {
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unused-vars": [
+          2,
+          {
+            "args": "none"
+          }
+        ]
+      }
+    }
+  ]
 }
