--- a/example/package.json
+++ b/example/package.json
@@ -5,11 +5,10 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-components": "link:..",
     "react-dom": "^16.4.1",
-    "react-scripts": "^1.1.4",
-    "react-components": "link:.."
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
