--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "react-components",
-  "version": "1.0.0",
+  "name": "@mels/react-components",
+  "version": "0.0.0",
   "description": "A collection of some of my frequently used React components.",
-  "author": "melanieseltzer",
+  "author": "Melanie Seltzer <melleh11@gmail.com>",
   "license": "MIT",
-  "repository": "melanieseltzer/react-components",
+  "homepage": "https://github.com/melanieseltzer/react-components#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/melanieseltzer/react-components.git"
+  },
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
@@ -27,33 +31,33 @@
     "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^23.1.5",
+    "@babel/core": "^7.4.3",
+    "@babel/runtime": "^7.4.3",
+    "@types/jest": "^24.0.11",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
-    "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0",
     "cross-env": "^5.1.4",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "gh-pages": "^1.2.0",
+    "gh-pages": "^2.0.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts-ts": "^2.16.0",
-    "rollup": "^0.62.0",
-    "rollup-plugin-babel": "^3.0.7",
+    "react-scripts-ts": "^3.1.0",
+    "rollup": "^1.9.0",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-node-resolve": "^4.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-typescript2": "^0.17.0",
-    "rollup-plugin-url": "^1.4.0",
+    "rollup-plugin-typescript2": "^0.20.1",
+    "rollup-plugin-url": "^2.2.0",
     "typescript": "^3.4.2"
   },
   "husky": {
