--- a/example/package.json
+++ b/example/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "react": "^16.4.1",
+    "react": "link:../node_modules/react",
     "react-library-boilerplate": "link:..",
-    "react-dom": "^16.4.1",
+    "react-dom": "link:../node_modules/react-dom",
     "react-scripts": "^2.1.8"
   },
   "scripts": {
