--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,9 @@
 version: 2
 jobs:
   build:
-    branches:
-      ignore:
-        - gh-pages
     docker:
       # specify the version you desire here
-      - image: circleci/node:7.10
+      - image: circleci/node:10.16.3
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -36,5 +33,11 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      # run tests!
+      # lint
+      - run: yarn lint
+
+      # typecheck
+      - run: yarn typecheck
+
+      # run tests
       - run: yarn test
