--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "npm": ">=5"
   },
   "scripts": {
-    "test": "cross-env CI=1 react-scripts-ts test --env=jsdom",
+    "test": "cross-env CI=1 react-scripts-ts test --env=jsdom --coverage",
     "test:watch": "react-scripts-ts test --env=jsdom",
     "lint": "eslint --ignore-path .eslintignore --ext .ts --ext .tsx src",
     "build": "rollup -c",
     "start": "rollup -c -w",
     "prepare": "yarn run build",
     "predeploy": "cd example && yarn install && yarn run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy": "gh-pages -m 'Updates [ci skip]' -d example/build",
+    "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0",
@@ -63,7 +64,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged && yarn typecheck && yarn test"
     }
   },
   "lint-staged": {
